--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" href="/style/bootstrap.min.css"/>
     <link rel="stylesheet" href="/style/style.css"/>
+    <link rel="stylesheet" href="/style/style.video-browser.css"/>
     <script src="https://maps.googleapis.com/maps/api/js"></script>
   </head>
   <body>
