--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Modern ReactJs and Redux - Projects</title>
     <link rel="stylesheet" href="/style/bootstrap.min.css"/>
     <link rel="stylesheet" href="/style/style.css"/>
     <link rel="stylesheet" href="/style/style.video-browser.css"/>
-    <script src="https://maps.googleapis.com/maps/api/js"></script>
+    <script src="/scripts/jquery-1.12.1.min.js"></script>
+    <script src="/scripts/bootstrap.min.js"></script>
   </head>
   <body>
     <div id="container"></div>
