--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="/style/bootstrap.min.css"/>
     <link rel="stylesheet" href="/style/style.css"/>
     <link rel="stylesheet" href="/style/style.video-browser.css"/>
+    <link rel="stylesheet" href="/style/style.library-app.css"/>
     <script src="/scripts/jquery-1.12.1.min.js"></script>
     <script src="/scripts/bootstrap.min.js"></script>
   </head>
