--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <link rel="stylesheet" href="/style/style.css"/>
     <link rel="stylesheet" href="/style/style.video-browser.css"/>
     <link rel="stylesheet" href="/style/style.library-app.css"/>
+    <link rel="stylesheet" href="/style/style.weather-app.css"/>
     <script src="/scripts/jquery-1.12.1.min.js"></script>
     <script src="/scripts/bootstrap.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js"></script>
   </head>
   <body>
     <div id="container"></div>
